--- a/style.css
+++ b/style.css
@@ -373,12 +373,12 @@ body {
 	margin: 0 0 0 35.22012578%;
 }
 .site-info {
-	font-size: 13px;
-	font-size: 1.3rem;
-	line-height: 1.8461538461;
-	margin: 0 4.85436893%;
-	padding: 24px 0;
-	padding: 2.4rem 0;
+	font-size: 0px;
+	font-size: 0rem;
+	line-height: 0;
+	margin: 0 0%;
+	padding: 0 0;
+	padding: 0 0;
 }
 
 
